--- a/src/assets/styles/settings/vars.css
+++ b/src/assets/styles/settings/vars.css
@@ -5,6 +5,7 @@
 
 	/* Neutral */
 	--white: hsl(0, 0%, 100%);
+	--background: #1e1e28;
 	--dark-desaturated-blue: hsl(236, 21%, 26%);
 	--very-dark-blue-primary: hsl(235, 16%, 14%);
 	--very-dark-blue-secondary: hsl(234, 17%, 12%);
